src/objects/Purchase_Request__c.object
<CustomObject>
    <description>Level 4 of the budgeting and planning hierarchy</description>
    <fields>
        <fullName>Alert_Sourcing__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Alert Sourcing</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_by_Strategic_Sourcer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Strategic Sourcer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_in_Oracle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved in Oracle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apr_Amt_Contractor__c</fullName>
        <formula>if(Month( Quarter__r.Month_3__c )=4,  Month_3_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apr Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Amt__c</fullName>
        <formula>if(Month( Quarter__r.Month_3__c )=4,  Month_3_Amt__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apr Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Amt_Contractor__c</fullName>
        <formula>if(Month( Quarter__r.Month_1__c )=8,  Month_1_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Amt__c</fullName>
        <formula>if(Month( Quarter__r.Month_1__c )=8, Month_1_Amt__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Line_Approved_Amount__c</fullName>
        <formula>Budget_Line__r.Budget_Line_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Line Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Line_Unrequested_Amount__c</fullName>
        <formula>Budget_Line__r.Uncommitted_Approved_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Line Unrequested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Line__c</fullName>
        <label>Budget Line</label>
        <referenceTo>Budget_Line__c</referenceTo>
        <relationshipLabel>Purchase Requests (Level 4)</relationshipLabel>
        <relationshipName>Purchase_Requests1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category_Code__c</fullName>
        <formula>RIGHT( TEXT(Category__c) , 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Request_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Please provide the requested change amount you would like to apply to this approved purchase request.  If you are creating a new Purchase Request, leave this field blank</inlineHelpText>
        <label>Change Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor_Change_Request_Amount__c</fullName>
        <label>Contractor Change Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>RIGHT( TEXT(Country__c), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxembourg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Goods_Services_will_be_Delivered__c</fullName>
        <inlineHelpText>Please indicate the expected date of when goods or services will have been fully received</inlineHelpText>
        <label>Date Goods/Services will be Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Planned_Expense__c</fullName>
        <label>Date of Planned Expense</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dec_Amt_Contractor__c</fullName>
        <formula>if(Month( Quarter__r.Month_2__c )=12,  Month_2_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_Amt__c</fullName>
        <formula>if(Month( Quarter__r.Month_2__c )=11, Month_2_Amt__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <formula>Department__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feb_Amt_Contractor__c</fullName>
        <formula>if(Month( Quarter__r.Month_1__c )=2,  Month_1_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Amt__c</fullName>
        <formula>if(Month( Quarter__r.Month_1__c )=2, Month_1_Amt__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GL_Segment__c</fullName>
        <formula>Country_Code__c  &amp; &quot;-&quot; &amp;  TEXT(Department_Code__c)  &amp; &quot;-&quot; &amp;   Category_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jan_Amt_Contractor__c</fullName>
        <formula>if(Month( Quarter__r.Month_3__c )=1,  Month_3_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_Amt__c</fullName>
        <formula>if(Month( Quarter__r.Month_3__c )=1, Month_3_Amt__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Amt_Contractro__c</fullName>
        <formula>if(Month( Quarter__r.Month_3__c )=7,  Month_3_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jul Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Amt__c</fullName>
        <formula>if(Month( Quarter__r.Month_3__c )=7, Month_3_Amt__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jul Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Amt_Contractor__c</fullName>
        <formula>if(Month( Quarter__r.Month_2__c )=6,  Month_2_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jun Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Amt__c</fullName>
        <formula>if(Month( Quarter__r.Month_2__c )=6, Month_2_Amt__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jun Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Amt_Contractor__c</fullName>
        <formula>if(Month( Quarter__r.Month_2__c )=3,  Month_2_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mar Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Amt__c</fullName>
        <formula>if(Month( Quarter__r.Month_2__c )=3, Month_2_Amt__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mar Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Amt_Contractor__c</fullName>
        <formula>if(Month( Quarter__r.Month_1__c )=5,  Month_1_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Amt__c</fullName>
        <formula>if(Month( Quarter__r.Month_1__c )=5,  Month_1_Amt__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_1_Amt_Contr__c</fullName>
        <label>Month 1 Amt Contr (Feb,May, Aug, or Nov)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_1_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>February
May
August
November</inlineHelpText>
        <label>Month 1 Amt (Feb, May, Aug, or Nov)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_2_Amt_Contr__c</fullName>
        <label>Month 2 Amt Contr (Mar,Jun, Sep, or Dec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_2_Amt__c</fullName>
        <inlineHelpText>March
June
September
December</inlineHelpText>
        <label>Month 2 Amt (Mar, Jun, Sep, or Dec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_3_Amt_Contr__c</fullName>
        <label>Month 3 Amt Contr (Apr,Jul, Oct, or Jan)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_3_Amt__c</fullName>
        <inlineHelpText>April
July
October
January</inlineHelpText>
        <label>Month 3 Amt (Apr, Jul, Oct or Jan)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nov_Amt_Contractor__c</fullName>
        <formula>if(Month( Quarter__r.Month_1__c )=11,  Month_1_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nov Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_Amt__c</fullName>
        <formula>if(Month( Quarter__r.Month_1__c )=11, Month_1_Amt__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nov Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Amt_Contractor__c</fullName>
        <formula>if(Month( Quarter__r.Month_3__c )=10,  Month_3_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oct Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Amt__c</fullName>
        <formula>if( MONTH( Quarter__r.Month_3__c ) =10, Month_3_Amt__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oct Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <externalId>true</externalId>
        <label>PO#</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR__c</fullName>
        <externalId>true</externalId>
        <label>PR#</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepaid_Expense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepaid Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pro_Serv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this purchase request related to professional services work to be performed?</inlineHelpText>
        <label>Pro Serv?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Request_Amount__c</fullName>
        <label>Purchase Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Request_Contractor_Amount__c</fullName>
        <label>Purchase Request Contractor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Quarter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Increase_Decrease__c</fullName>
        <label>Reason for Increase/Decrease</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>US/Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L. America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Action__c</fullName>
        <label>Request Action</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request - Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request - Decrease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_New_Vendor_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you require a new vendor to be created of if you cannot find your vendor in the list.  A notification will be sent to Strategic Sourcing with your request.</inlineHelpText>
        <label>Request New Vendor Setup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Requestor__c</fullName>
        <label>Secondary Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sep_Amt_Contractor__c</fullName>
        <formula>if(Month( Quarter__r.Month_2__c )=9,  Month_2_Amt_Contr__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sep Amt Contractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_Amt__c</fullName>
        <formula>if(Month( Quarter__r.Month_2__c )=9, Month_2_Amt__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sep Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>As a user you can choose: 
New/Not Submitted
Submitted
Change Request
Cancelled</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New/Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Contractor_PR_Amount_with_Changes__c</fullName>
        <formula>if ( ISPICKVAL(Request_Action__c,&quot;Change Request - Increase&quot;), Purchase_Request_Contractor_Amount__c + Contractor_Change_Request_Amount__c ,
if(ISPICKVAL(Request_Action__c,&quot;Change Request - Decrease&quot;), Purchase_Request_Contractor_Amount__c - Contractor_Change_Request_Amount__c  , Purchase_Request_Contractor_Amount__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contractor PR Amount with Changes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_PR_Amount_with_Changes__c</fullName>
        <formula>if ( ISPICKVAL(Request_Action__c,&quot;Change Request - Increase&quot;), Purchase_Request_Amount__c +  Change_Request_Amount__c ,
if(ISPICKVAL(Request_Action__c,&quot;Change Request - Decrease&quot;), Purchase_Request_Amount__c -  Change_Request_Amount__c ,Purchase_Request_Amount__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PR Amount with Changes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Placeholder__c</fullName>
        <label>Vendor-change to lookup</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Purchase Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Purchase Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Requests</pluralLabel>
    <recordTypes>
        <fullName>Contractor_Spend</fullName>
        <active>true</active>
        <label>Contractor Spend</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Spend</fullName>
        <active>true</active>
        <label>Program Spend</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Change_Amount_not_negative</fullName>
        <active>true</active>
        <errorConditionFormula>Change_Request_Amount__c&lt;0</errorConditionFormula>
        <errorDisplayField>Change_Request_Amount__c</errorDisplayField>
        <errorMessage>Please enter your change in absolute value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Request_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL( Request_Action__c  ,&quot;Change Request - Increase&quot;), ISPICKVAL(Request_Action__c ,&quot;Change Request - Decrease&quot;)) , 
AND(
NOT(OR(ISPICKVAL(Status__c,&quot;Change Request&quot;),ISPICKVAL(Status__c,&quot;In Progress&quot;),CONTAINS(TEXT(Status__c),&quot;Approved&quot;))))
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status must = Change Request, In Progress or Approved if Request Action = Increase or Decrease</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contractor_Change_Amount_not_negative</fullName>
        <active>true</active>
        <errorConditionFormula>Contractor_Change_Request_Amount__c &lt;0</errorConditionFormula>
        <errorDisplayField>Contractor_Change_Request_Amount__c</errorDisplayField>
        <errorMessage>Please enter your change in absolute value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PR_Action_Change_Amount_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Request_Action__c, &quot;Change Request - Increase&quot;),ISPICKVAL(Request_Action__c, &quot;Change Request - Decrease&quot;)), OR(ISBLANK(Change_Request_Amount__c),ISNULL(Change_Request_Amount__c),Change_Request_Amount__c=0),
 $RecordType.Name = &quot;Program Spend&quot;
)</errorConditionFormula>
        <errorDisplayField>Change_Request_Amount__c</errorDisplayField>
        <errorMessage>Change Amount is required if the Request Action on the  Purchase Request = Increase or Decrease</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PR_Action_ContractChange_Amount_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Request_Action__c, &quot;Increase&quot;),ISPICKVAL(Request_Action__c, &quot;Decrease&quot;)), OR(ISBLANK( Contractor_Change_Request_Amount__c ),ISNULL(Contractor_Change_Request_Amount__c ),Contractor_Change_Request_Amount__c =0),
 $RecordType.Name = &quot;Contractor Spend&quot;
)</errorConditionFormula>
        <errorDisplayField>Contractor_Change_Request_Amount__c</errorDisplayField>
        <errorMessage>Change Amount is required if the Request Action on the  Purchase Request = Increase or Decrease</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Period</fullName>
        <active>false</active>
        <errorConditionFormula>Quarter__c &lt;&gt;  Budget_Line__r.Program_Budget__r.Budget_Owner__r.Period__c</errorConditionFormula>
        <errorDisplayField>Quarter__c</errorDisplayField>
        <errorMessage>The period you have chosen does not match the period of the Budget Line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Request_Amt_Cannot_be_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT( ISPICKVAL(Status__c,&quot;New/Not Submitted&quot;)), ISCHANGED( Purchase_Request_Amount__c  ),

NOT(OR( $User.Username = &apos;mchan@budget.com&apos;, $User.Username = &apos;mhristova@budget.com&apos;, $User.Username = &apos;epark@budget.com&apos;,$User.Username = &apos;mrosenbaum@budget.com&apos;, $User.Username = &apos;dchang@budget.com&apos;,  $User.Username = &apos;jbadanguio@budget.com&apos;, $User.Username = &apos;mchan@dreamforce.com&apos;, $User.Username = &apos;mhristova@dreamforce.com&apos;, $User.Username = &apos;epark@dreamforce.com&apos;,$User.Username = &apos;mrosenbaum@dreamforce.com&apos;, $User.Username = &apos;dchang@dreamforce.com&apos;,  $User.Username = &apos;jbadanguio@dreamforce.com&apos;)))</errorConditionFormula>
        <errorDisplayField>Purchase_Request_Amount__c</errorDisplayField>
        <errorMessage>PR Amount cannot be changed unless the PR is in New Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Request_cannot_exceed_Budget</fullName>
        <active>true</active>
        <errorConditionFormula>OR((Budget_Line__r.Rollup_of_Purchase_Request_Amount__c - PRIORVALUE( Total_PR_Amount_with_Changes__c ) + Total_PR_Amount_with_Changes__c &gt; Budget_Line__r.Budget_Line_Amount__c),AND(ISNEW(), Budget_Line__r.Rollup_of_Purchase_Request_Amount__c + Purchase_Request_Amount__c &gt; Budget_Line__r.Budget_Line_Amount__c)
)</errorConditionFormula>
        <errorDisplayField>Purchase_Request_Amount__c</errorDisplayField>
        <errorMessage>The sum of all the purchase requests for this budget line cannot exceed the approved budget amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_increase_decrease_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(OR( ISPICKVAL(Request_Action__c,&quot;Change Request - Increase&quot;), ISPICKVAL(Request_Action__c,&quot;Change Request - Decrease&quot;)),

OR(ISNULL(Reason_for_Increase_Decrease__c) , Reason_for_Increase_Decrease__c=&quot; &quot;,ISBLANK(Reason_for_Increase_Decrease__c)))
,
AND(OR(ISCHANGED(Request_Action__c),ISCHANGED( Change_Request_Amount__c ),ISCHANGED( Contractor_Change_Request_Amount__c)),  OR( ISPICKVAL(Request_Action__c,&quot;Change Request - Increase&quot;), ISPICKVAL(Request_Action__c,&quot;Change Request - Decrease&quot;)), 
NOT(ISCHANGED(Reason_for_Increase_Decrease__c)))
)</errorConditionFormula>
        <errorDisplayField>Reason_for_Increase_Decrease__c</errorDisplayField>
        <errorMessage>You must enter a new reason for increase/decrease if this is a new request, or update the reason if you have made a change to the requested amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
AND( NOT(ISPICKVAL(PRIORVALUE(Status__c),&quot;Approved&quot;)), $Profile.Name &lt;&gt;&quot;System Administrator&quot;, ISPICKVAL(Status__c,&quot;Approved&quot;)),
AND( NOT(ISPICKVAL(PRIORVALUE(Status__c),&quot;In Progress&quot;)), $Profile.Name &lt;&gt;&quot;System Administrator&quot;, ISPICKVAL(Status__c,&quot;In Progress&quot;)),
AND( NOT(ISPICKVAL(PRIORVALUE(Status__c),&quot;Rejected&quot;)), $Profile.Name &lt;&gt;&quot;System Administrator&quot;, ISPICKVAL(Status__c,&quot;Rejected&quot;)),
AND( NOT(ISPICKVAL(PRIORVALUE(Status__c),&quot;Cancelled&quot;)), $Profile.Name &lt;&gt;&quot;System Administrator&quot;, ISPICKVAL(Status__c,&quot;Cancelled&quot;))
),
NOT(OR( $User.Username = &apos;mchan@budget.com&apos;, $User.Username = &apos;mhristova@budget.com&apos;, $User.Username = &apos;epark@budget.com&apos;,$User.Username = &apos;mrosenbaum@budget.com&apos;, $User.Username = &apos;dchang@budget.com&apos;,  $User.Username = &apos;jbadanguio@budget.com&apos;, $User.Username = &apos;mchan@dreamforce.com&apos;, $User.Username = &apos;mhristova@dreamforce.com&apos;, $User.Username = &apos;epark@dreamforce.com&apos;,$User.Username = &apos;mrosenbaum@dreamforce.com&apos;, $User.Username = &apos;dchang@dreamforce.com&apos;,  $User.Username = &apos;jbadanguio@dreamforce.com&apos;)))</errorConditionFormula>
        <errorMessage>You cannot update the Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sum_of_Monthly_Amounts</fullName>
        <active>true</active>
        <errorConditionFormula>(NULLVALUE(Month_3_Amt__c,0) + NULLVALUE(Month_2_Amt__c,0)  + NULLVALUE(Month_1_Amt__c,0) ) &lt;&gt;   Total_PR_Amount_with_Changes__c</errorConditionFormula>
        <errorDisplayField>Month_1_Amt__c</errorDisplayField>
        <errorMessage>The Sum of Monthly Amounts must equal the Purchase Request Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sum_of_Monthly_Amounts_Contractor</fullName>
        <active>true</active>
        <errorConditionFormula>(NULLVALUE( Month_3_Amt_Contr__c ,0) + NULLVALUE( Month_2_Amt_Contr__c ,0)  + NULLVALUE( Month_1_Amt_Contr__c ,0) ) &lt;&gt;    Total_Contractor_PR_Amount_with_Changes__c</errorConditionFormula>
        <errorDisplayField>Month_1_Amt__c</errorDisplayField>
        <errorMessage>The Sum of Monthly Contractor Amounts must equal the Total Contractor Purchase Request Amount (including change requested amounts)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(  Vendor_Placeholder__c )   ,TEXT(Status__c)&lt;&gt;&quot;New/Not Submitted&quot;)</errorConditionFormula>
        <errorDisplayField>Vendor_Placeholder__c</errorDisplayField>
        <errorMessage>Vendor is required.  
If you cannot find the vendor in the list or need a new vendor to be created, change your Purchase Request Status to new and check the &apos;Request New Vendor Setup?&apos; box and save the record.</errorMessage>
    </validationRules>
</CustomObject>